Fix overflow of category combo box and align course icon correctly

--- a/less/essential/categories.less
+++ b/less/essential/categories.less
@@ -15,12 +15,6 @@ body.categoryicons {
 
     /* Set the position on the frontpage */ 
      
-    #frontpage-category-names, 
-    #frontpage-category-names .course_category_tree { 
-        clear: both; 
-        padding: 0px; 
-    }
-
     .frontpage-category-names .collapsible-actions,
     #frontpage-category-combo .collapsible-actions {
         display: none;
