--- a/less/essential/frontpage.less
+++ b/less/essential/frontpage.less
@@ -54,10 +54,6 @@
     margin-bottom: 5px;
 }
 
-.coursebox>.info>.coursename a {
-    background-position: left 0.2em;
-}
-
 /* @group Alerts */
 
 .useralerts [class^="fa-stack"] {
